--- a/tex/latex/lenote/lenote.sty
+++ b/tex/latex/lenote/lenote.sty
@@ -1,21 +1,22 @@
 %--------------------------------------------------
 % LePtC 双语彩色笔记模版 - 符号部分
-% filename  = leptc.sty
+% filename  = lenote.sty
 % author = LePtC
-% version = 2016.02
+% version = 2016.11
 % email = alileptc@gmail.com
-% available on GitHub: https://github.com/LePtC/LeNote
+% README on GitHub: https://github.com/LePtC/LeNote
 %--------------------------------------------------
 
 \NeedsTeXFormat{LaTeX2e}[1994/12/01]
-\ProvidesPackage{leptc}
+\ProvidesPackage{lenote}
 
 
 
 
 %--------------------------------------------------
 % 定义颜色
-\RequirePackage{xcolor} % Package xcolor Warning: Incompatible color definition 已修正
+\RequirePackage[dvipsnames]{xcolor} % 有别的包调用过这个包
+% environ 这个包要求 xcolor 带 dvipsnames 选项
 %--------------------------------------------------
 
 
@@ -28,7 +29,7 @@
 \definecolor{o}{RGB}{255,102,51} % Matica 橙
 \definecolor{p}{RGB}{128,0,128} % 清华紫
 
-\definecolor{y}{RGB}{140,140,140} % 灰，仿铅笔
+\definecolor{y}{RGB}{100,100,100} % 灰，仿铅笔
 \definecolor{w}{RGB}{255,255,255} % 白，用于反色
 
 
@@ -83,7 +84,6 @@
 % 函数名的自动高亮，包括三角函数等，不包括大型运算符类函数
 \RequirePackage{letltxmacro} % 替换原有的 command
 \RequirePackage{xifthen} % \ifthenelse
-\RequirePackage{physymb} % 2015.08 重要新包，主要是提供 Griffiths 的 r，这个包放 esvec 之后会让矢量变 harpoon，原因不明
 %--------------------------------------------------
 
 
@@ -142,11 +142,14 @@
 \newcommand{\sinc}{{\color{o}\,\mathrm{sinc}\,}}
 
 % 函数名要用正体区分
-\newcommand{\He}{{\color{o}\mathrm{H}}} % 厄米多项式
-\newcommand{\Pl}{{\color{o}\mathrm{P}}} % 勒让德多项式
-\renewcommand{\La}{{\color{o}\mathrm{L}}} % 拉盖尔多项式
-\newcommand{\Yl}{{\color{o}\mathrm{Y}}} % 球谐函数
-\newcommand{\Li}{{\color{o}\,\mathrm{Li}\,}} % 多对数函数...
+\DeclareMathOperator{\La}{{\color{o}\mathrm{L}}} % 拉盖尔多项式
+\DeclareMathOperator{\He}{{\color{o}\mathrm{H}}} % 厄米多项式
+\DeclareMathOperator{\Pl}{{\color{o}\mathrm{P}}} % 勒让德多项式
+\DeclareMathOperator{\Yl}{{\color{o}\mathrm{Y}}} % 球谐函数
+\DeclareMathOperator{\Li}{{\color{o}\mathrm{Li}}} % 多对数函数...
+\DeclareMathOperator{\Jb}{{\color{o}\mathrm{J}}} % 贝塞尔函数
+\DeclareMathOperator{\No}{{\color{o}\mathrm{N}}} % 诺依曼函数
+
 
 \let\Re\relax
 \DeclareMathOperator{\Re}{{\color{o}\mathrm{Re}}}
@@ -161,17 +164,26 @@
 \DeclareMathOperator{\Ra}{{\color{o}\mathcal{R}}}
 
 \let\sgn\relax % 避免与 physymb 冲突
-\newcommand{\sgn}{\,{\color{o}\mathrm{sgn}}\,}
-
-\newcommand{\erf}{\,{\color{o}\mathrm{erf}}\,}
+\DeclareMathOperator{\sgn}{{\color{o}\mathrm{sgn}}}
+\let\erf\relax
+\DeclareMathOperator{\erf}{{\color{o}\mathrm{erf}}}
 
 
 % 粗体被注册为群，双线被注册为数域，花体泛函，TODO new: 斜粗体为矩阵
 \RequirePackage{bm}
 
-\newcommand{\aut}{\,{\mathbf{Aut}}\,}
-\newcommand{\inn}{\,{\mathbf{Inn}}\,}
-\renewcommand{\ker}{\,{\mathbf{Ker}}\,}
+
+\DeclareMathOperator{\col}{{\color{o}\mathrm{Col}}}
+\DeclareMathOperator{\row}{{\color{o}\mathrm{Row}}}
+\let\ker\relax
+\DeclareMathOperator{\ker}{{\color{o}\mathrm{Ker}}}
+% \let\null\relax % 和 tableofcontents 冲突
+\DeclareMathOperator{\nul}{{\color{o}\mathrm{Null}}}
+% \let\span\relax % 和虚线 \hdashline 冲突
+\DeclareMathOperator{\spa}{{\color{o}\mathrm{Span}}}
+
+\DeclareMathOperator{\aut}{{\color{o}\mathrm{Aut}}}
+\DeclareMathOperator{\inn}{{\color{o}\mathrm{Inn}}}
 
 % 字母形的算符高亮绿色
 \newcommand{\Fo}{{\ensuremath{{\color{o}\mathcal{F}}}}}
@@ -179,12 +191,16 @@
 
 % 与拉氏量密度区分, 不上色
 \newcommand{\Lag}{\mathcal{L}}
+\newcommand{\cL}{\mathcal{L}} % 线性映射算符的空间
+\newcommand{\cP}{\mathcal{P}} % 多项式函数的空间
 
 
 \newcommand{\id}{\,{\color{o}\mathrm{id}}\,}
 
 % TODO 全都换 operator 新方案
+\let\tr\relax
 \DeclareMathOperator{\tr}{{\color{o}\mathrm{tr}}}
+\let\rank\relax
 \DeclareMathOperator{\rank}{{\color{o}\mathrm{rank}}}
 \let\dim\relax
 \DeclareMathOperator{\dim}{{\color{o}\mathrm{dim}}}
@@ -197,6 +213,8 @@
 \DeclareMathOperator{\diag}{{\color{o}\mathrm{diag}}}
 \DeclareMathOperator{\cond}{{\color{o}\mathrm{cond}}}
 
+% 列矢量化
+\DeclareMathOperator{\cvec}{{\color{o}\mathrm{vec}}}
 
 % TODO E D Cov 等是用 mathrm 还是 mathsf?
 % \newcommand{\Ep}{{\color{o}\operatorname{E}}}
@@ -206,17 +224,21 @@
 
 % \lim \sum 之类不作处理?
 % 图画符号（\prime，根号）即使是算符也不上色,因为本身不易混淆,上色很麻烦 ...
-\renewcommand{\mod}{{\color{o}\,\mathrm{mod}\,}}
-\renewcommand{\gcd}{{\color{o}\,\mathrm{gcd}\,}}
-\newcommand{\lcm}{{\color{o}\,\mathrm{lcm}\,}}
+\let\mod\relax
+\DeclareMathOperator{\mod}{{\color{o}\mathrm{mod}}}
+\let\gcd\relax
+\DeclareMathOperator{\gcd}{{\color{o}\mathrm{gcd}}}
+\let\lcm\relax
+\DeclareMathOperator{\lcm}{{\color{o}\mathrm{lcm}}}
 
 % 字母大型运算符,加粗?
-\LetLtxMacro{\oldmax}{\max}
-% \renewcommand{\max}{\mathop{\boldsymbol\oldmax}}
-\renewcommand{\max}{{\color{o}\oldmax}}
-\LetLtxMacro{\oldmin}{\min}
-% \renewcommand{\min}{\mathop{\boldsymbol\oldmin}}
-\renewcommand{\min}{{\color{o}\oldmin}}
+% \LetLtxMacro{\oldmax}{\max}
+% % \renewcommand{\max}{\mathop{\boldsymbol\oldmax}}
+% \renewcommand{\max}{{\color{o}\oldmax}}
+% \LetLtxMacro{\oldmin}{\min}
+% % \renewcommand{\min}{\mathop{\boldsymbol\oldmin}}
+% \renewcommand{\min}{{\color{o}\oldmin}}
+
 
 
 
@@ -298,9 +320,9 @@
 \newcommand{\smallo}{{\color{o}\mathsf{o}}}
 
 % 排列组合, 我习惯 \Choose \Arrange , 也有叫 Combination Permutation
-\newcommand{\Cho}[2]{{\color{o}\mathsf{C}}_{#1}^{#2}\,}
+\newcommand{\Cho}[2]{{\color{o}\mathrm{C}}_{#1}^{#2} }
 % \newcommand{\Arr}[2]{\scalebox{0.7}[1]{\color{o}$\mathsf{A}$}_{#1}^{#2}\,}
-\newcommand{\Arr}[2]{{\color{o}\mathsf{A}}_{#1}^{#2}\,}
+\newcommand{\Arr}[2]{{\color{o}\mathrm{A}}_{#1}^{#2} }
 
 % 格式微调
 \LetLtxMacro{\oldexists}{\exists}
@@ -327,7 +349,7 @@
 % 偏微分分式  ---------------
 
 % physymb 还提供了 pdd, pddd… 以简化高阶导
-\renewcommand{\pd}[3][]{\frac{\partial[#1] #2}{\partial
+\newcommand{\pd}[3][]{\frac{\partial[#1] #2}{\partial
   \ifthenelse{\equal{#1}{}}{#3}{{#3}^{#1}}
 }}
 \newcommand{\pdat}[4][]{ \mathchoice
@@ -376,14 +398,16 @@
 % 方便单位矢量
 \newcommand{\ve}[1]{\,{\color{b}\vec{e_{#1}}}}
 \newcommand{\veb}[1]{\,{\color{b}\bm{e}_{#1}}} % 矩阵中用粗体表示
+\newcommand{\vebco}[1]{\,{\color{b}\bm{e}\co[#1]}}
 \newcommand{\vg}[1]{\,{\color{b}\vec{g_{#1}}}}
+% 导数
 \newcommand{\ved}[1]{\dot{\ve{#1}}}
 \newcommand{\vedd}[1]{\ddot{\ve{#1}}}
 % 对偶空间基矢 up low
-\newcommand{\vel}[1]{\,{\color{b}e_{#1}}}
-\newcommand{\veu}[1]{\,{\color{b}e^{#1}}}
-\newcommand{\vgl}[1]{\,{\color{b}g_{#1}}}
-\newcommand{\vgu}[1]{\,{\color{b}g^{#1}}}
+\newcommand{\vel}[1]{\,{\color{b}\bm{e}_{#1}}} % 同 veb, 历史遗留…
+\newcommand{\veu}[1]{\,{\color{b}\bm{e}^{#1}}}
+\newcommand{\vgl}[1]{\,{\color{b}\bm{g}_{#1}}}
+\newcommand{\vgu}[1]{\,{\color{b}\bm{g}^{#1}}}
 
 % 左矢量
 \newcommand{\lvec}[1]{\overset{\rotatebox[origin=c]{180}{\raisebox{-0.7pt}{$\fldr$}}}{#1}}
@@ -421,10 +445,12 @@
 
 % 常用：单列表
 
-\newcommand{\tab}[1]{\begin{tabular}{l}%
-  #1%
-  \end{tabular}%
-}
+% \newcommand{\tab}[1]{\begin{tabular}{l}%
+%   #1%
+%   \end{tabular}%
+% }
+\newcommand{\tab}[2][c]{%
+  \begin{tabular}[c]{@{}#1@{}}#2\end{tabular}}
 
 % 常用：右侧列表
 
@@ -470,12 +496,19 @@
 	\hspace{-8pt}
 }}
 
+% 列虚线, 例 ccc:c (行虚线自己加 \hdashline[2pt/2pt] )
+\newcommand{\matdash}[3][1.0]{\scalebox{#1}{\ensuremath{\left[
+\begin{array}{#2}
+#3
+\end{array}
+\right]}}}
+
 % 行列式 ---------------
 
 \newcommand{\matd}[2][1.0]{\scalebox{#1}{
 	\renewcommand{\arraystretch}{.8}
 	\hspace{-10pt}
-	\ensuremath{\begin{vmatrix}#2\end{vmatrix}}
+	\ensuremath{\begin{vmatrix}\,\,#2\,\,\end{vmatrix}}
 	\hspace{-8pt}
 }}
 
@@ -542,9 +575,12 @@
 
 % 普通插图 ---------------
 
-% \figin[相对宽度]{图片文件名}
+% \nn[相对宽度]{图片文件名}
 \newcommand{\figin}[2][0.99]{
-	\includegraphics[width=#1\textwidth]{#2}
+  \includegraphics[width=#1\textwidth]{#2}
+}
+\newcommand{\figint}[2][0.99]{
+	\raisebox{-\totalheight+\baselineskip+20pt}{\includegraphics[width=#1\textwidth]{#2}}
 }
 \newcommand{\fig}[2][0.99]{
 	\begin{figure}[!htb]\centering
@@ -602,7 +638,9 @@
 		&{\raisebox{-\totalheight+\baselineskip}{\includegraphics[width=#2\textwidth]{#1}}}
 	\end{tabular}}
 }
-
+\newcommand{\figt}[2][0.99]{
+\raisebox{-.5\height}{\includegraphics[width=#1\textwidth]{#2}}
+}
 
 
 %--------------------------------------------------
@@ -677,8 +715,8 @@
 \newcommand{\eqa}[1]{$\begin{aligned}#1\end{aligned}$}
 % \newcommand{\eqa}[1]{$\begin{align*}#1\end{align*}$}
 
-\newcommand{\eqn}[1]{\begin{equation}#1\end{equation}}
-\newcommand{\eqna}[1]{\eqn{\begin{aligned}#1\end{aligned}}}
+\newcommand{\eqn}[2][]{\vspace{-8pt}\begin{equation}\label{#1} #2\end{equation}}
+\newcommand{\eqna}[2][]{\eqn{\begin{aligned}\label{#1} #2\end{aligned}}}
 
 % damn bar...
 \renewcommand{\bar}[1]{\overline{#1}}
@@ -699,6 +737,8 @@
 
 \renewcommand{\le}{\leqslant}
 \renewcommand{\ge}{\geqslant}
+\renewcommand{\preceq}{\preccurlyeq}
+\renewcommand{\succeq}{\succcurlyeq}
 
 % spacing ---------------
 
@@ -747,6 +787,7 @@
 % \onright 有 \xrightarrow 了
 
 \newcommand{\LePtC}{L\raisebox{3pt}{e}\hspace{1pt}P\raisebox{-1pt}{\scalebox{0.8}{t}}\hspace{1pt}C}
+\newcommand{\LeNote}{L\raisebox{3pt}{e}\hspace{1pt}Note}
 
 % text 中打 $\sim$
 \newcommand{\tsim}{{\raise.17ex\hbox{\!$\mathtt{\sim}$}}}
@@ -773,8 +814,8 @@
 %\RequirePackage{mhchem} % 化学公式
 \newcommand{\ce}[1]{\ensuremath{\mathrm{#1}}}
 
-% \newcommand{\abs}[1]{\left|#1\right|} % 已由 physymb 提供
-% \newcommand{\norm}[1]{\left\lVert{#1}\right\rVert}
+\newcommand{\abs}[1]{\left|#1\right|} % 已由 physymb 提供
+\newcommand{\norm}[1]{\left\lVert{#1}\right\rVert}
 
 \newcommand{\E}[1]{\times10^{#1}} % 方便数量级
 
@@ -815,14 +856,24 @@
 
 % 电磁学 ---------------
 
-\newcommand{\emf}{\mathscr{E}} % electromotive force
+% \RequirePackage{physymb} % 2015.08 重要新包
+% 2016.11 physymb 作者弃坑了,用以下代替
+% \RequirePackage{physics}
+% \RequirePackage{commath} % 提供 \norm
+% \RequirePackage{mandi} % 提供 Griffiths 的 \rr
+\RequirePackage{calligra}
+\DeclareMathAlphabet{\mathcalligra}{T1}{calligra}{m}{n}
+
 % Griffiths 的相对位矢
-\newcommand{\rr}{{\mathchoice
-  {\shifttext{-2pt}{\ensuremath{\scriptr}}}
-  {\shifttext{-2pt}{\ensuremath{\scriptr}}}
-  {\scalebox{0.8}{\shifttext{-2pt}{\ensuremath{\scriptr}}}}
-  {\scalebox{0.65}{\shifttext{-2pt}{\ensuremath{\scriptr}}}}
-}}
+\newcommand{\rr}{{\fontsize{18}{20}{\mathchoice
+  {\shifttext{-2pt}{\ensuremath{\mathcalligra{r}}}}
+  {\shifttext{-2pt}{\ensuremath{\mathcalligra{r}}}}
+  {\scalebox{0.8}{\shifttext{-2pt}{\ensuremath{\mathcalligra{r}}}}}
+  {\scalebox{0.65}{\shifttext{-2pt}{\ensuremath{\mathcalligra{r}}}}}
+}}}
+
+\newcommand{\emf}{\mathscr{E}} % electromotive force
+
 \newcommand{\muB}{\mu_\mathrm{B}} % 玻尔磁子
 
 % 角度，温度 ---------------
@@ -839,6 +890,9 @@
 \newcommand{\oR}{{\ensuremath{\color{b}\,^{\circ}{\mathrm R}\,}}}
 
 % 光学 ---------------
+
+\newcommand{\Zhe}{{\text{\fontspec{Adobe Fangsong Std}Ж}}}
+
 % \newcommand{\no}{n_\mathrm{o}} % 非寻常光？...
 
 % TODO 左手右手 LR 变正体, 透射反射 TR 不用变?
@@ -918,9 +972,8 @@
 
 % TEMPLATE ---------------
 
-\RequirePackage[xetex,colorlinks,unicode,pdfencoding=auto]{hyperref}
-% 超链接包，unicode 和 \chap 有冲突？
-\hypersetup{urlcolor=[rgb]{0.5,0,0.5},linkcolor=[rgb]{0.5,0,0.5}}
+\RequirePackage[xetex,colorlinks=true,unicode,pdfencoding=auto]{hyperref}
+\hypersetup{ allcolors=[rgb]{0.5,0,0.5} }
 
 % \RequirePackage[sort&compress]{natbib} % 参考文献包
 % \setlength{\bibsep}{0pt}
